# prl_baselines

./: .gitignore  .gitmodules  README.md  converted.txt  pytest.ini  requirements.txt  setup.py
data/02_vectorized/0.25-0.50/: 6MAX_0.25-0.50.000.csv
prl/baselines/: __init__.py  config.gin  config.py  example.py  example_ray.py  example_tianshou.py  tutorial.ipynb
prl/baselines/agent/: agent.py  eval_self_play.py
prl/baselines/agents/: agent.py  agents.py  baseline.py  dummy_agents.py  eval_self_play.py  hand_ranges.py  mc_agent.py  policies.py  rllib_policies.py  rule_based.py  tianshou_agents.py  tianshou_policies.py
prl/baselines/analysis/: clip_unzipped_player_files_for_snowie.py  compute_analysis.py  compute_dataset_stats_from_unzipped.py  compute_player_stats_from_txt.py  compute_snowie_and_stats_from_experiment.py  count_folds_unzipped.py  make_datset_dstar.py  nn_inspection.py  nn_inspection_from_vec_instead_of_text.py
prl/baselines/cpp_hand_evaluator/: monte_carlo.py  rank.py
prl/baselines/cpp_hand_evaluator/cpp/: CMakeLists.txt  hand_evaluator.cp38-win_amd64.pyd  rank.cpp  run_monte_carlo.cpp  test_mc.py  test_rank.py
prl/baselines/cpp_hand_evaluator/cpp/ext/scripts/: rank.py
prl/baselines/deprecated/: fast_hsmithy_parser.py  hsmithy_extractor.py  select_players.py
prl/baselines/evaluation/: analyzer.py  eval_analyzer.py  eval_performance_of_baseline.py  eval_runner.py  eval_tianshou_env.py  eval_vectorizer.py  eval_vectorizer_from_dict.py  eval_vectorizer_mulit_wayy.py  example_eval_with_pokersnowie.py  experiment_runner.py  stats.py  utils.py
(+302 files in other folders)
