cmake_minimum_required(VERSION 3.16)
project(HandEvaluator)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(ext/pybind11/)
pybind11_add_module(hand_evaluator run_monte_carlo.cpp)
add_library(run_monte_carlo run_monte_carlo.cpp)
add_executable(${PROJECT_NAME} main.cpp run_monte_carlo.cpp)
target_link_libraries(${PROJECT_NAME} run_monte_carlo)